--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
 # datasource
   datasource:
       name: recruit
-      url: jdbc:mysql://localhost:3306/recruit?characterEncoding=utf8&useSSL=false
+      url: jdbc:mysql://47.94.151.130:3306/recruit?characterEncoding=utf8&useSSL=false
       username: root
-      password: 123456
+      password: root
 # 使用druid数据源
       type: com.alibaba.druid.pool.DruidDataSource
       driver-class-name: com.mysql.jdbc.Driver
